--- a/english_list/templates/english_list/delete_word.html
+++ b/english_list/templates/english_list/delete_word.html
@@ -7,7 +7,7 @@
 <body>
     <form method="POST">
         {% csrf_token %}
-        <p>No{{ object.id }}の{{ object.ja_word }}を削除します</p>
+        <p>No{{ object.id }}の{{ object.ja_word }}の登録を削除します</p>
         <input type="submit" value="削除">
     </form>
 
