--- a/english_list/templates/english_list/form_create_view.html
+++ b/english_list/templates/english_list/form_create_view.html
@@ -15,6 +15,6 @@
         </form>
         <br>
     </div>
-    <a href="{% url 'english_list:index' %}">一覧リストへ</a><br>
+    <a href="{% url 'english_list:list_word' %}">一覧リストへ</a><br>
 </body>
 </html>
