--- a/english_list/templates/english_list/top.html
+++ b/english_list/templates/english_list/top.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <p>今日は{{ date }}</p>
-    <p>登録件数は{{ count }}です</p>
-</head>
-<body>
+<!　base.htmlを継承する -->
+{% extends "english_list/base.html" %}
 
-</body>
-</html>
+<!　block.superは親テンプレートのブロック内部の値を持った変数になります。そして、それを子テンプレートで使える -->
+{% block title %}トップページ{{block.super}}{% endblock %}
+
+{% block content %}
+    <title>Title</title>
+    <p>現在の日時は{{ time }}です</p>
+    <p>現在の英文・英単語リストの登録件数は{{ count }}件です</p>
+    <a href="{% url 'english_list:list_word' %}">一覧リスト</a><br>
+    <br>
+    <a href="{% url 'english_list:form_create_view' %}">新規登録</a>
+{% endblock %}
