--- a/english_list/templates/english_list/list_word.html
+++ b/english_list/templates/english_list/list_word.html
@@ -27,6 +27,8 @@
             <th class="th_memo">メモ</th>
             <th class="th_edit">編集</th>
             <th class="th_delete">削除</th>
+            <th class="th_detail">詳細</th>
+            <th class="th_image">画像</th>
         </tr>
 
         {% for object in object_list %}
@@ -38,6 +40,12 @@
             <td class="td_memo">{{object.memo}}</td>
             <td class="td_edit"><a href="{% url 'english_list:edit_word' object.id %}">編集</a></td>
             <td class="td_delete"><a href="{% url 'english_list:delete_word' object.id %}">削除</a></td>
+            <td class="td_detail"><a href="{% url 'english_list:detail_word' object.id %}">詳細</a></td>
+            {% if object.file %}
+                <td class="td_image"><img width="100px" height="100px" src="{{ object.file.url }}"></td>
+            {% else %}
+                <td class="td_image">No image</td>
+            {% endif %}
         </tr>
         {% endfor %}
 
