--- a/english_list/templates/english_list/word.html
+++ b/english_list/templates/english_list/word.html
@@ -15,6 +15,7 @@
     {% else %}
         <p>No image available</p>
     {% endif %}
+    <p><a href="{% url 'english_list:edit_word' object.id %}">編集</a></p>
 
 </body>
 </html>
