--- a/english_list/templates/english_list/base.html
+++ b/english_list/templates/english_list/base.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 　　<!　以下ヘッダーの文字列は継承先でも表示される -->
-    <h1>プジさんの英文・単語リストアプリ</h1>
+    <h1>英文・単語リストアプリ</h1>
 
     <!　block endblockの部分は継承先が記載する -->
     {% block content %}{% endblock %}
