--- a/english_list/templates/english_list/list_word.html
+++ b/english_list/templates/english_list/list_word.html
@@ -8,11 +8,17 @@
     <script src="https://kit.fontawesome.com/41f9c2a86b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <hi>プジさんの英文・英単語リスト</hi>
     <p>{{message|safe}} </p>
-    <a href="{% url 'english_list:form_create_view' %}"> 登録フォームへ </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
+    <P>{% if user.is_authenticated %}
+        <hi>{{ user.get_username }}さんの英文・英単語リスト</hi>
+        <h2>こんにちは☆{{ user.get_username }}さん</h2><br>
+        <a href="{% url 'english_list:logout' %}"> ログアウト </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
+       {% else %}
+        <hi>英文・英単語リスト</hi><br>
+        <a href="{% url 'english_list:login' %}"> ログイン </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
+       {% endif %}
+        <a href="{% url 'english_list:form_create_view' %}"> 登録フォームへ </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
     <br>
-
 
 <form method="get" action="{% url 'english_list:list_word' %}" method="get">
   <p>カテゴリ検索　<input name="category" class="form-control me-2" type="search" type="text" placeholder="Search" aria-label="Search" value="{{category}}">
