--- a/english_list/templates/english_list/top.html
+++ b/english_list/templates/english_list/top.html
@@ -7,6 +7,14 @@
 {% block content %}
     <p>現在の日時は{{ time }}です</p>
     <p>現在の英文・英単語リストの登録件数は{{ count }}件です</p>
+
+    <p>{% if user.is_authenticated %}
+        ログイン名☆{{ user.get_username }}さん<br>
+        <a href="{% url 'english_list:logout' %}">ログアウト</a>
+        {% else %}
+        <a href="{% url 'english_list:login' %}">ログイン</a><br>
+        <a href="{% url 'english_list:signup' %}">Signup:</a><br>
+   {% endif %} </p>
     <a href="{% url 'english_list:list_word' %}">一覧リスト</a><br>
     <a href="{% url 'english_list:form_create_view' %}">新規登録</a>
 {% endblock %}
