--- a/english_list/templates/english_list/login.html
+++ b/english_list/templates/english_list/login.html
@@ -6,6 +6,11 @@
 
 {% block content %}
 <h2>ログイン</h2>
+<h3>{% if messages %}
+    {% for message in messages %}
+        {{ message }}
+    {% endfor %}
+{% endif %}</h3>
 
 <form action="" method="post">
     {% csrf_token %}
