top urlタグの変更

--- a/english_list/templates/english_list/list_word.html
+++ b/english_list/templates/english_list/list_word.html
@@ -45,13 +45,10 @@
         {% endif %}
     </span>
 </div>
-
-
-
     <table>
         <tr>
             <th class="th_id">ID</th>
-            <th class="th_category">カテゴリー</th>
+            <th class="th_category">カテゴリ</th>
             <th class="th_ja_word">日本語</th>
             <th class="th_en_word">英語</th>
             <th class="th_memo">メモ</th>
