--- a/english_list/templates/english_list/list_word.html
+++ b/english_list/templates/english_list/list_word.html
@@ -18,12 +18,19 @@
         <a href="{% url 'english_list:login' %}"> ログイン </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
         <a href="{% url 'english_list:form_create_view' %}"> 登録フォームへ </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
        {% endif %}
+{#<form method="get" action="{% url 'english_list:list_word' %}">#}
+{#  <p><input type="checkbox" name="my_list" {% if my_list %}checked{% endif %} onchange="this.form.submit();">自分の投稿のみ表示</p>#}
+{#</form>#}
+<form method="post" action="{% url 'english_list:list_word' %}">
+  {% csrf_token %}
+  <p><input type="checkbox" name="my_list" {% if my_list %}checked{% endif %} onchange="this.form.submit();">自分の投稿のみ表示</p>
+</form>
+
 <form method="get" action="{% url 'english_list:list_word' %}" method="get">
   <p>カテゴリ検索　<input name="category" class="form-control me-2" type="search" type="text" placeholder="Search" aria-label="Search" value="{{category}}">
     <button class="btn btn-outline-primary" type="submit"><i class="fa-sharp fa-regular fa-face-smile" style="color: deeppink"></i> カテゴリ検索</button>
    </p>
 </form>
-
     <form class="d-flex" action="{% url 'english_list:list_word' %}" method="get">
     <p>単語検索　　　<input name="keyword" class="form-control me-2" type="search" type="text" placeholder="Search" aria-label="Search" value="{{keyword}}">
     <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search" style="color: deepskyblue"></i> 単語検索</button></p>
