--- a/english_list/templates/english_list/list_word.html
+++ b/english_list/templates/english_list/list_word.html
@@ -8,32 +8,46 @@
     <script src="https://kit.fontawesome.com/41f9c2a86b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <p>{{message|safe}} </p>
+<p>{{ message|safe }} </p>
+<header style="background-color: gray;color: cornsilk;text-align: center;font-size:50px;height: 30px;display: flex;align-items: center;justify-content: center;width: 100%;">
     <P>{% if user.is_authenticated %}
         <hi>{{ user.get_username }}さんの英文・英単語リスト</hi>
-        <h2>こんにちは☆{{ user.get_username }}さん  <small><a href="{% url 'english_list:logout' %}"> ログアウト </a></small><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br></h2>
-        <a href="{% url 'english_list:form_create_view' %}"> 登録フォームへ </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
-       {% else %}
+    {% else %}
         <hi>ようこそ　ゲストさん☆英文・英単語リスト</hi><br>
-        <a href="{% url 'english_list:login' %}"> ログイン </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
-        <a href="{% url 'english_list:form_create_view' %}"> 登録フォームへ </a><i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
-       {% endif %}
+    {% endif %}
+    </p>
+</header>
+<h2>こんにちは☆{{ user.get_username }}さん <small><a href="{% url 'english_list:logout' %}"> ログアウト </a></small><i
+        class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br></h2>
+<a href="{% url 'english_list:form_create_view' %}"> 登録フォームへ </a>
+<i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
+<a href="{% url 'english_list:login' %}"> ログイン </a>
+<i class="fa-solid fa-pen-nib fa-1x" style="color: green"></i><br>
 {#<form method="get" action="{% url 'english_list:list_word' %}">#}
-{#  <p><input type="checkbox" name="my_list" {% if my_list %}checked{% endif %} onchange="this.form.submit();">自分の投稿のみ表示</p>#}
+    {#  <p><input type="checkbox" name="my_list" {% if my_list %}checked{% endif %} onchange="this.form.submit();">自分の投稿のみ表示</p>#}
 {#</form>#}
 <form method="post" action="{% url 'english_list:list_word' %}">
-  {% csrf_token %}
-  <p><input type="checkbox" name="my_list" {% if my_list %}checked{% endif %} onchange="this.form.submit();">自分の投稿のみ表示</p>
+    {% csrf_token %}
+    <p><input type="checkbox" name="my_list" {% if my_list %}checked{% endif %} onchange="this.form.submit();">自分の投稿のみ表示
+    </p>
 </form>
+<a href="{% url 'english_list:select_users' %}"> ユーザー選択 </a>
 
 <form method="get" action="{% url 'english_list:list_word' %}" method="get">
-  <p>カテゴリ検索　<input name="category" class="form-control me-2" type="search" type="text" placeholder="Search" aria-label="Search" value="{{category}}">
-    <button class="btn btn-outline-primary" type="submit"><i class="fa-sharp fa-regular fa-face-smile" style="color: deeppink"></i> カテゴリ検索</button>
-   </p>
+    <p>カテゴリ検索　<input name="category" class="form-control me-2" type="search" type="text" placeholder="Search"
+                       aria-label="Search" value="{{ category }}">
+        <button class="btn btn-outline-primary" type="submit"><i class="fa-sharp fa-regular fa-face-smile"
+                                                                 style="color: deeppink"></i> カテゴリ検索
+        </button>
+    </p>
 </form>
-    <form class="d-flex" action="{% url 'english_list:list_word' %}" method="get">
-    <p>単語検索　　　<input name="keyword" class="form-control me-2" type="search" type="text" placeholder="Search" aria-label="Search" value="{{keyword}}">
-    <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search" style="color: deepskyblue"></i> 単語検索</button></p>
+<form class="d-flex" action="{% url 'english_list:list_word' %}" method="get">
+    <p>単語検索　　　<input name="keyword" class="form-control me-2" type="search" type="text" placeholder="Search"
+                         aria-label="Search" value="{{ keyword }}">
+        <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search" style="color: deepskyblue"></i>
+            単語検索
+        </button>
+    </p>
 </form>
 <form method="post" action="{% url 'english_list:export' %}">
     {% csrf_token %}
@@ -56,40 +70,40 @@
         {% endif %}
     </span>
 </div>
-    <table>
-        <tr>
-            <th class="th_id">ID</th>
-            <th class="th_category">カテゴリ</th>
-            <th class="th_ja_word">日本語</th>
-            <th class="th_en_word">英語</th>
-            <th class="th_memo">メモ</th>
-            <th class="th_image">画像</th>
-            <th class="th_user">投稿者</th>
-            <th class="th_edit">編集</th>
-            <th class="th_delete">削除</th>
-            <th class="th_detail">詳細</th>
-        </tr>
+<table>
+    <tr>
+        <th class="th_id">ID</th>
+        <th class="th_category">カテゴリ</th>
+        <th class="th_ja_word">日本語</th>
+        <th class="th_en_word">英語</th>
+        <th class="th_memo">メモ</th>
+        <th class="th_image">画像</th>
+        <th class="th_user">投稿者</th>
+        <th class="th_edit">編集</th>
+        <th class="th_delete">削除</th>
+        <th class="th_detail">詳細</th>
+    </tr>
 
-        {% for object in object_list %}
-         <tr>
-            <td class="td_id">{{object.id}}</td>
-            <td class="td_category">{{object.category}}</td>
-            <td class="td_ja_word">{{object.ja_word}}</td>
-            <td class="td_en_word">{{object.en_word}}</td>
-            <td class="td_memo">{{object.memo}}</td>
+    {% for object in wordlists_list %}
+        <tr>
+            <td class="td_id">{{ object.id }}</td>
+            <td class="td_category">{{ object.category }}</td>
+            <td class="td_ja_word">{{ object.ja_word }}</td>
+            <td class="td_en_word">{{ object.en_word }}</td>
+            <td class="td_memo">{{ object.memo }}</td>
             {% if object.file %}
                 <td class="td_image"><img width="100px" height="100px" src="{{ object.file.url }}"></td>
             {% else %}
                 <td class="td_image">No image</td>
             {% endif %}
-            <td class="td_user">{{object.user.username}}</td>
+            <td class="td_user">{{ object.user.username }}</td>
             <td class="td_edit"><a href="{% url 'english_list:edit_word' object.id %}">編集</a></td>
             <td class="td_delete"><a href="{% url 'english_list:delete_word' object.id %}">削除</a></td>
             <td class="td_detail"><a href="{% url 'english_list:detail_word' object.id %}">詳細</a></td>
 
         </tr>
-        {% endfor %}
-    </table>
-    <br>
+    {% endfor %}
+</table>
+<br>
 </body>
 </html>
