--- a/english_list/templates/english_list/list_users.html
+++ b/english_list/templates/english_list/list_users.html
@@ -5,8 +5,8 @@
     <button type="submit">実行</button>
 </form>
 
-{% for object in wordlists_list %}
-    <p>{{ object.ja_word }} {{ object.en_word }}</p>
-{% empty %}
-    <p>No wordlists found</p>
-{% endfor %}
+{#{% for object in wordlists_list %}#}
+{#    <p>{{ object.ja_word }} {{ object.en_word }}</p>#}
+{#{% empty %}#}
+{#    <p>No wordlists found</p>#}
+{#{% endfor %}#}
