--- a/english_list/templates/english_list/list_users.html
+++ b/english_list/templates/english_list/list_users.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load tag %}
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -71,16 +73,18 @@
 <div class="pagination">
     <span class="step-links">
         {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">前のページへ</a>
+            <a href="?{% url_replace request 'page' page_obj.previous_page_number %}">前へ</a>
         {% endif %}
-        <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-        </span>
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <span>{{ num }}</span>
+            {% else %}
+                <a href="?{% url_replace request 'page' num %}">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            <a href="?{% url_replace request 'page' page_obj.next_page_number %}">次へ</a>
         {% endif %}
     </span>
 </div>
