--- a/english_list/templates/english_list/list_users.html
+++ b/english_list/templates/english_list/list_users.html
@@ -64,11 +64,6 @@
         </button>
     </p>
 </form>
-<form method="post" action="{% url 'english_list:export' %}">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary">CSVダウンロード</button>
-</form>
-
 
 <div class="pagination">
     <span class="step-links">
@@ -88,6 +83,40 @@
         {% endif %}
     </span>
 </div>
+{#<div class="pagination">#}
+{#    <span class="step-links">#}
+{#        {% if page_obj.has_previous %}#}
+{#            <a href="?page=1">&laquo; first</a>#}
+{#            <a href="?page={{ page_obj.previous_page_number }}">前のページへ</a>#}
+{#        {% endif %}#}
+{#        <span class="current">#}
+{#            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.#}
+{#        </span>#}
+{##}
+{#        {% if page_obj.has_next %}#}
+{#            <a href="?page={{ page_obj.next_page_number }}">next</a>#}
+{#            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>#}
+{#        {% endif %}#}
+{#    </span>#}
+{#</div>#}
+{#{% if wordlists.has_other_pages %}#}
+{#    <div class="pagination">#}
+{#        {% if wordlists.has_previous %}#}
+{#            <a href="?page={{ wordlists.previous_page_number }}{% if query %}&{{ query }}{% endif %}">&laquo;</a>#}
+{#        {% endif %}#}
+{#        {% for num in wordlists.paginator.page_range %}#}
+{#            {% if wordlists.number == num %}#}
+{#                <span class="current-page">{{ num }}</span>#}
+{#            {% elif num > wordlists.number|add:'-3' and num < wordlists.number|add:'3' %}#}
+{#                <a href="?page={{ num }}{% if query %}&{{ query }}{% endif %}">{{ num }}</a>#}
+{#            {% endif %}#}
+{#        {% endfor %}#}
+{#        {% if wordlists.has_next %}#}
+{#            <a href="?page={{ wordlists.next_page_number }}{% if query %}&{{ query }}{% endif %}">&raquo;</a>#}
+{#        {% endif %}#}
+{#    </div>#}
+{#{% endif %}#}
+
 <table>
     <tr>
         <th class="th_id">ID</th>
